// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nest union type 1`] = `
"// @flow
import type { Action } from './actionTypes';
import { HOGE, FOO } from './constants';

export function hoge(): Action {
    return {
        type: HOGE
    };
}
export function foo(): Action {
    return {
        type: FOO
    };
}"
`;

exports[`nest union type with args 1`] = `
"// @flow
import type { Action } from './actionTypes';
import { HOGE, FOO, FOO_FUGA } from './constants';

export function hoge(): Action {
    return {
        type: HOGE
    };
}
export function foo(): Action {
    return {
        type: FOO
    };
}
export function fooFuga(id: number): Action {
    return {
        type: FOO_FUGA,
        id
    };
}"
`;
